--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "embla-carousel-react": "^8.1.3",
+    "firebase": "^10.12.5",
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18"
