--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^4.2.0",
     "embla-carousel-react": "^8.1.3",
     "firebase": "^10.12.5",
     "next": "^14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stripe": "^16.6.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
